LBSD-2467 Fixed problem with sort label and fixed sr_CY language

--- a/server/liveblog/themes/themes_assets/classic/po/classic.sr_CY.po
+++ b/server/liveblog/themes/themes_assets/classic/po/classic.sr_CY.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Classic Theme\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: Aleksandar Jeličić <aleksandar.jelicic@sourcefabric.org>\n"
+"Last-Translator: Helmy Giacoman <helmy.giacoman@sourcefabric.org>\n"
 "Language-Team: Live Blog <liveblog@sourcefabric.org>\n"
 "Language: sr_CY\n"
 "MIME-Version: 1.0\n"
